--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "typecheck": "tsc --project tsconfig.json --noEmit"
   },
   "dependencies": {
+    "framer-motion": "^11.11.10",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.2",
