--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "typecheck": "tsc --project tsconfig.json --noEmit"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "framer-motion": "^11.11.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-markdown": "^9.0.1",
+    "react-router-dom": "^6.27.0",
+    "remark-gfm": "^4.0.0",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
