--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,11 @@ jobs:
       - name: Run build
         run: pnpm run build
 
-      - name: Deploy to GitHub Pages
+      - name: Copy 404.html for SPA support
+        # This step copies 404.html into the dist folder to handle SPA routing.
+        run: cp 404.html dist/
+
+      - name: Upload artifact for GitHub Pages
         uses: actions/upload-pages-artifact@v1
         with:
           path: dist  # Path to the build output directory (Vite default)
@@ -54,4 +58,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
