--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,9 +15,6 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [22]  # Use the latest LTS version here if supported
 
     steps:
       - name: Checkout repository
@@ -28,26 +25,28 @@ jobs:
         with:
           version: 9
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use latest LTS Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 'lts/*'
           cache: 'pnpm'
 
       - name: Install dependencies
         run: pnpm install
 
+      - name: Run tests
+        run: pnpm run test
+
       - name: Run build
         run: pnpm run build
 
       - name: Copy 404.html for SPA support
-        # This step copies 404.html into the dist folder to handle SPA routing.
         run: cp 404.html dist/
 
       - name: Upload artifact for GitHub Pages
         uses: actions/upload-pages-artifact@v3
         with:
-          path: dist  # Path to the build output directory (Vite default)
+          path: dist
 
   deploy:
     environment:
